apps/productivity/kasm/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kasm
  namespace: kasm
spec:
  parentRefs:
    - name: atoca-house-internal
      namespace: kube-system
  hostnames:
    - kasm.atoca.house
  rules:
    - backendRefs:
        - name: kasm-proxy
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
